5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1723_2496.log
== TEST (2019-05-09 10:33:18) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	if(x = num + x):
		print(x)
-- ERROR:
File "XXXX", line 4
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:33:35) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	if(x = num + x):
		print(x)
-- ERROR:
File "XXXX", line 4
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:35:13) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	soma = num + soma
	if(x = num + x):
		print(x)
-- ERROR:
File "XXXX", line 5
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:35:48) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	soma = num + soma
	print(soma)
	if(x = num + x):
		print(x)
-- ERROR:
File "XXXX", line 6
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:35:56) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	soma = num + soma
	print(soma)
		if(x = num + x):
			print(x)
-- ERROR:
File "XXXX", line 6
    if(x = num + x):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:37:05) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	soma = num + soma
	print(num)
if(x = num + x):
	print(x)
-- ERROR:
File "XXXX", line 6
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:37:10) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	soma = num + soma
	print(num)
	if(x = num + x):
		print(x)
-- ERROR:
File "XXXX", line 6
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:37:40) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	
	if(x = num + x):
		print(x)
-- ERROR:
File "XXXX", line 5
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:37:46) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	if(x = num + x):
		print(x)
-- ERROR:
File "XXXX", line 4
    if(x = num + x):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:38:17) 
-- CODE:
num = int(input("numeros: "))

while(num != -1):
	if(num = num + 1):
		print(x)
-- ERROR:
File "XXXX", line 4
    if(num = num + 1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:20) 
-- CODE:
num = int(input("numeros: "))
x = 0
while(num != -1):
	x = num + x
	num = int(input("numeros: "))
		
-- ERROR:
File "XXXX", line 4
    if(num = num + 1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:42:11) 
-- CODE:
num = int(input("numeros: "))
x = 0
while(num != -1):
	x = num + x
	num = int(input("numeros: "))
print(x)
		
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:42:22) 
-- CODE:
num = int(input("numeros: "))
x = 0
while(num != -1):
	x = num + x
	num = int(input("numeros: "))
print(x)
		
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:42:40) 
-- CODE:
num = int(input("numeros: "))
x = 0
while(num != -1):
	x = num + x
	num = int(input("numeros: "))
print(x)
		
-- EXECUTION TIME:
0.169498
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:13:47) 
-- CODE:
num = int(input("valor"))
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("valores"))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:14:12) 
-- CODE:
num = int(input("valor: "))
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("valores"))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:14:25) 
-- CODE:
num = int(input("valor: "))
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("valores: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 16:19:10) 
-- CODE:
num = int(input("valor: "))
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("valores: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 16:22:05) 
-- CODE:
num = int(input("valor: "))
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("valores: "))
print(soma)
-- EXECUTION TIME:
0.210522
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:56:03) 
-- CODE:
num = int(input("valor: "))
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("valores: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 02:31:46) 
-- CODE:
num = int(input("valor: "))
soma = 0

while(num != -1):
	soma = num + soma
	num = int(input("valores: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
